--- a/Pipfile
+++ b/Pipfile
@@ -7,6 +7,8 @@ name = "pypi"
 typer = {extras = ["all"], version = "*"}
 newsapi-python = "*"
 openai = "*"
+newspaper3k = "*"
+rich = "*"
 
 [dev-packages]
 
